--- a/front/index.html
+++ b/front/index.html
@@ -14,6 +14,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	
+		<script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+		<script src="https://momentjs.com/downloads/moment-timezone-with-data-10-year-range.js"></script>
 		<!--Highchart-->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -23,7 +25,7 @@
 		<link href="./style.css" rel="stylesheet" type="text/css">
 		<script src="./app.js"></script>
 	</head>
-	<body onload="javascript:UI.init('btcusd')">
+	<body onload="javascript:UI.init((new URL(window.location)).searchParams.get('topic'))">
 	    <!-- Navbar for branding -->
 	    <nav class="navbar navbar-dark">
 	    	<a class="navbar-brand" href="#">Every Logger</a>
@@ -34,11 +36,12 @@
 	    	<div id="info-content" class="container-fluid">
 	    		<div class="row">
 					<div class="col-8">
-						<p id="info-name">?</p>
+						<p id="info-name"></p>
 						<p id="info-detail"></p>
 					</div>
 					<div class="col-4 flex-align">
-						<p id="info-value">?</p>
+						<p id="info-value">...</p>
+						<p id="info-date"></p>
 						<p id="info-delta"></p>
 					</div>
 				</div>
