Change app-vue.js to main app.js

--- a/front/index.html
+++ b/front/index.html
@@ -28,7 +28,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		
 		<link href="./style.css" rel="stylesheet" type="text/css">
-		<script src="./app-vue.js"></script>
+		<script src="./app.js"></script>
 		<script src="./api.js"></script>
 	</head>
 	<body onload="javascript:View.Init((new URL(window.location)).searchParams.get('topic'))">
