--- a/front/index.html
+++ b/front/index.html
@@ -71,7 +71,8 @@
 			    <div id="container"></div>
 			</figure>
 			
-			<div id="table-wrapper" class="table-reponsive">
+			<div id="table-wrapper" class="table-reponsive" v-if="History[Term] !== undefined">
+				<p>총 {{ History[Term].length }}개의 데이터가 있습니다.</p>
 				<table class="table table-dark" v-show="NowTab == 1">
 					<thead>
 					    <tr>
@@ -79,7 +80,7 @@
 					      <th scope="col">값</th>
 					    </tr>
 				  	</thead>
-				  	<tbody v-if="History[Term] !== undefined">
+				  	<tbody>
 				  		<template v-for="item in History[Term].slice().reverse()">
 				  			<tr>
 				  				<td scope="row">{{ moment(item[0]).format("YY/MM/DD HH:mm:ss") }}</th>	
